# Proyecto-Grupo10-Debuggers-Unidos

./: .gitignore  Funcional.py  Functional.py  RAMA-Prueba  README.md  bot.py  preguntas.yaml  pyproject.toml  test.txt
