[project]
name = "proyecto-grupo10-debuggers-unidos-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.0",
    "black==25.1.0",
    "brotli==1.1.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "executing==2.2.0",
    "fastjsonschema==2.21.2",
    "idna==3.7",
    "ipykernel==6.30.1",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "matplotlib-inline==0.1.7",
    "mutagen==1.47.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "packaging==25.0",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pycryptodomex==3.20.0",
    "pygments==2.19.2",
    "pypdf2==3.0.1",
    "python-dateutil==2.9.0.post0",
    "pywin32==311",
    "pyyaml==6.0.2",
    "pyzmq==27.0.1",
    "requests==2.32.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "slack-sdk==3.32.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "tinycss2==1.4.0",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20250809",
    "typing-extensions==4.14.1",
    "uri-template==1.3.0",
    "urllib3==2.2.2",
    "uv==0.8.14",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==14.1",
    "widgetsnbextension==4.0.14",
    "yt-dlp==2025.1.15",
]
